--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>RedditCloneAngular</title>
-  <base href="/">
+  <base href="/reddit-clone-angular">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="styles.61d1348a70feaae0b6bd.css"></head>
